--- a/deeplearning-tutorial/Chatbot.ipynb
+++ b/deeplearning-tutorial/Chatbot.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1006ece1-d367-4061-a06d-886faf100fa6",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b7dd9d2d-e8be-4e33-89ce-cc0d863f356b",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "696cf634-5689-4a40-b48b-248eb1340939",
    "metadata": {},
    "outputs": [],
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fd98b56e-f258-41ad-a87e-12a55155eba6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Helper function for prompting\n",
     "def get_completion_from_messages(messages, model=\"gpt-3.5-turbo\", temperature=0):\n",
-    "    response = openai.ChatCompletion.create(\n",
+    "    response = openai.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
     "        temperature=temperature, # this is the degree of randomness of the model's output\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2e264db-940a-497d-a2e7-b4614b42f11a",
+   "id": "6a1868db-efe9-4e34-badb-22c390a4bcaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +146,23 @@
     ")\n",
     "\n",
     "dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2e264db-940a-497d-a2e7-b4614b42f11a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Config\n",
+    "import panel as pn  # GUI\n",
+    "# pn.extension()\n",
+    "\n",
+    "# panels = [] # collect display \n",
+    "\n",
+    "# inp = pn.widgets.TextInput(value=\"Hi\", placeholder='Enter text here…')\n",
+    "# button_conversation = pn.widgets.Button(name=\"Ask Bot!\")"
    ]
   },
   {
@@ -269,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
