--- a/deeplearning-tutorial/Prompting.ipynb
+++ b/deeplearning-tutorial/Prompting.ipynb
@@ -58,17 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "27b84569-29df-47f7-8158-7417d77d87f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Helper function for prompting\n",
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\", temperature=0):\n",
-    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
+    "def get_completion(prompt, model=\"gpt-3.5-turbo\", temperature=0, max_tokens=200):\n",
+    "    messages = [{\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "                {\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
+    "        # max_tokens=max_tokens,\n",
     "        temperature=temperature, # this is the degree of randomness of the model's output\n",
     "    )\n",
     "    return response.choices[0].message[\"content\"]\n"
@@ -776,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
